--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,20 @@
         <os.detected.arch>X86_64</os.detected.arch>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jibx/jibx-bind -->
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-bind</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
@@ -21,17 +35,6 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
             <version>3.11.4</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/io.netty/netty-tcnative-boringssl-static -->
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>2.0.30.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-transport-native-unix-common</artifactId>
-            <version>4.1.48.Final</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
@@ -75,6 +78,12 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alipay.sofa/hessian -->
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.3</version>
         </dependency>
     </dependencies>
 </project>
