--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>reflections</artifactId>
             <version>0.9.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
 
