--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,12 @@
             <artifactId>com.sun.tools.attach</artifactId>
             <version>1.8.0_jdk8u172-b11</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>7.3.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
