--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.200</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.20</version>
